contain float using clearfix technique

--- a/index.html
+++ b/index.html
@@ -13,36 +13,37 @@
     flow. Now the normal flow is header & footer. While the sections and asides elements are rendered on top of
     normal flow. Evidence: Borders of all tags. -->
     <header>This is the header of my website</header>
-    <section class="first-content">
-        <h1>Section 1 in my website</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
-            euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
-            vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
-            erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
-            amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
-            euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
-            vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
-            erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
-            amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
-    </section>
-    <section class="first-content">
-        <h1>Section 2 in my website</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
-            euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
-            vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
-            erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
-            amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
-            euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
-            vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
-            erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
-            amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
-    </section>
+    <div class="group">
+        <section class="first-content">
+            <h1>Section 1 in my website</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
+                euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
+                vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
+                erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
+                amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
+                euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
+                vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
+                erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
+                amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
+        </section>
+        <section class="first-content">
+            <h1>Section 2 in my website</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
+                euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
+                vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
+                erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
+                amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum hendrerit magna, eget
+                euismod augue cursus in. In erat velit, ultricies sit amet egestas vel, sagittis in leo. Nam quis ante
+                vulputate, aliquam est non, luctus dolor. In justo eros, tristique nec metus nec, auctor condimentum
+                erat. In ultrices a dolor quis gravida. Nulla facilisi. Praesent id dui ipsum. Ut vitae lacinia nisi, sit
+                amet pretium purus. Maecenas quis blandit enim, quis semper lectus.</p>
+        </section>
 
-    <aside> Aside Section 1</aside>
-    <aside> Aside Section 2</aside>
-
+        <aside> Aside Section 1</aside>
+        <aside> Aside Section 2</aside>
+    </div>
     <footer>Footer</footer>
 
     <script src=""></script>
